[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsa-python"
version = "0.1.0"
description = "Educational RSA implementation in pure Python (no padding)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "rsa-python contributors"}]

[tool.setuptools.packages.find]
where = ["src"]
